<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".gateway.LoginActivity">

    <TextView
            android:text="@string/login_to_mystore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:fontFamily="monospace"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/usernameEt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hint_username"
            android:id="@+id/usernameEt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/hint_password"
            android:id="@+id/passwordEt"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/usernameEt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

    <Button
            android:text="@string/label_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/passwordEt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />


    <TextView
            android:text="Don't have an account?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dontHaveAccountLbl"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/loginBtn"
            app:layout_constraintRight_toRightOf="parent" />

    <TextView
            android:text=" REGISTER HERE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerHereLbl"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@id/dontHaveAccountLbl"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>