<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".gateway.RegisterActivity">


    <TextView
            android:text="Create new account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newAccountLbl"
            android:fontFamily="monospace"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/newPasswordEt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hint_username"
            android:id="@+id/newUsernameEt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/hint_password"
            android:id="@+id/newPasswordEt"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/newUsernameEt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

    <Button
            android:text="@string/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createAccountBtn"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/newPasswordEt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>